--- a/GameEngineDevelopment/Exercise03/GameEngine/GameEngine.vcxproj
+++ b/GameEngineDevelopment/Exercise03/GameEngine/GameEngine.vcxproj
@@ -72,13 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\riche\OneDrive\Desktop\s233122\Game-Engine-Development\RCasey Tutorial 04 Exercise 03\SDL2-2.24.0\include;C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\riche\OneDrive\Desktop\s233122\Game-Engine-Development\RCasey Tutorial 04 Exercise 03\SDL2-2.24.0\lib\x86;C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\riche\OneDrive\Desktop\s233122\Game-Engine-Development\RCasey Tutorial 04 Exercise 03\SDL2-2.24.0\include;C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\riche\OneDrive\Desktop\s233122\Game-Engine-Development\RCasey Tutorial 04 Exercise 03\SDL2-2.24.0\lib\x86;C:\Users\Administrator\Desktop\s233122\Game Engine Development\RCasey Tutorial 03 Exercise 03\SDL2-2.24.0\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
